--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,12 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+ul {
+    list-style-type: none; /* Removes bullets */
+    padding: 0; /* Removes left indentation */
+}
+
+ul li {
+    margin-bottom: 10px; /* Adds spacing between list items */
+}
